# enterprise-ai-orchestrator

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CREWAI_ADVANCED_FEATURES_RESEARCH.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
crews/ceo_crew/: ceo_crew.py
crews/ceo_crew/config/: agents.yaml  tasks.yaml
crews/finance_crew/: finance_crew.py
crews/finance_crew/config/: agents.yaml  tasks.yaml
crews/hr_crew/: hr_crew.py
crews/hr_crew/config/: agents.yaml  tasks.yaml
crews/market_research_crew/: market_research_crew.py
crews/market_research_crew/config/: agents.yaml  agents_old.yaml.bak  tasks.yaml
crews/operations_crew/: operations_crew.py
crews/operations_crew/config/: agents.yaml  tasks.yaml
crews/product_development_crew/: product_development_crew.py
crews/product_development_crew/config/: agents.yaml  tasks.yaml
crews/sales_marketing_crew/: sales_marketing_crew.py
crews/sales_marketing_crew/config/: agents.yaml  tasks.yaml
docs/: HIERARCHICAL_PROCESS_GUIDE.md  INTERNAL_DOC_RAG_TOOL.md  OLLAMA_SETUP.md
examples/: rag_tool_usage.py
shared/: config.py
shared/documents/: README.md  sample_company_policy.md  un_declaration_human_rights.html
shared/tools/: __init__.py  crew_tools.py  internal_doc_rag_tool.py
shared/utils/: guardrails.py
